Removing recursive comparison from Eth2NetworkConfigurationTest (#7999)